--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to this free super simple website. You'll modify my code to make your own portfolio website by the end of class. Put a simple paragraph here introducing yourself.</p>
+    <p> Hello, my name is Rafa. I am Mexican and I am very passionate about trucks. I am very happy about the line of work that I do (Construction) it has helped me with knowing how much it actually costs to live. It has also taught me to visualize and solve real life problems. I am alos an only child which has led me to looking at things from a different perspective than other people.</p>
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
 </div>
