--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Rafa's Site</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Rafael Rivera">
 
