--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
+  <font color="orange"> <h2>Computer Class </font>
 </div>
 
 <div class="row-fluid">
   <div class="span12">
     <p> Hello, my name is Rafa. I am Mexican and I am very passionate about trucks. I am very happy about the line of work that I do (Construction) it has helped me with knowing how much it actually costs to live. It has also taught me to visualize and solve real life problems. I am alos an only child which has led me to looking at things from a different perspective than other people.</p>
 <div class="page-header">
-  <font color="orange"> <h2>My Projects  </font></h2>
+  <font color="blue"> <h2>My Projects  </font></h2>
 </div>
 
 <p>Here is a list of my projects.</p>
