--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <li><a href="pages/user_site.html">Fake Project 1</a></li>
   <li><a href="pages/project_site.html">Fake Project 1</a></li>
 </ul>
-    <img src="flag.jpg">
+    <img src="mflag.jpg">
 
   </div>
 </div>
